# pytest_leesson

./: README.md  configuration.py  pyproject.toml
src/enams/: global_enams.py
tests/: test_something.py
